--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,14 @@ header nav ul li:hover {
 /* Cor padrão dos itens */
 header nav ul li {
     color: var(--cor-destaque);
+    letter-spacing: 2px;
 }
 
 header nav ul a#contato{
     display: inline-block;
     text-align: center;
     padding-top: 6px;
+    margin: 0.50rem;
     width: 7rem;
     height: 2.5rem;
     border-radius: 50px;
@@ -621,3 +623,5 @@ footer .local-redes .social-media .sociais img:hover {
     background-color: #62efffd0;
     transform: scale(1.1);
 }
+
+/* RESPONSIVIDADE */
